--- a/AboutMe.html
+++ b/AboutMe.html
@@ -6,6 +6,7 @@
     <title>Maria Viterbo</title>
     <link rel="stylesheet" type="text/css" href="Portfolio.css">
     <link href="http://allfont.net/allfont.css?fonts=linotypezapfino-three" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 </head>
     
     
