--- a/Lifestyle.html
+++ b/Lifestyle.html
@@ -41,6 +41,9 @@
             </div>
         </div>
     </div>
+
+    <br>
+    <hr class="stylee">
     
     <div id="photos">
     <img class="gall" src="images/0.JPG">
